Fix spacing around fields

--- a/less/joust.less
+++ b/less/joust.less
@@ -456,7 +456,7 @@
 	width: 100%;
 	height: 30%;
 	margin: 0 auto;
-	padding: 10px 0;
+	padding: 0;
 
 	display: flex;
 	flex-direction: row;
